--- a/pages/donate.html
+++ b/pages/donate.html
@@ -23,14 +23,14 @@
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
                 <a href="../index.html#home"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Home</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Home</a>
                 <a href="../index.html#about"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">About</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">About</a>
                 <a href="leaderboard.html"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Leaderboard</a>
-                <a href="staff.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Staff</a>
-                <a href="donate.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Donate</a>
-                <a href="rules.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Leaderboard</a>
+                <a href="staff.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Staff</a>
+                <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
+                <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
                     class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
@@ -90,7 +90,7 @@
                     <div class="donateBox-itemList flex flex-wrap gap-4 justify-center">
                         <!-- Donation Option 1 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💷 Contributor</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapat role @Contributor</li>
@@ -106,13 +106,13 @@
                                 <p class="text-xs text-gray-400">* Sudah berdonasi? Silahkan buka ticket</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-[#aa724d]">Rp50.000</span>
+                                <span class="text-lg font-bold text-[#e7a77c]">Min Rp50.000</span>
                             </div>
                         </div>
 
                         <!-- Donation Option 2 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💶 Donator</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapatkan role @Donator</li>
@@ -128,13 +128,13 @@
                                 <p class="text-xs text-gray-400">* sudah berdonasi? Silahkan buka ticket</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-[#aa724d]">Rp10.000</span>
+                                <span class="text-lg font-bold text-[#e7a77c]">Min Rp10.000</span>
                             </div>
                         </div>
 
                         <!-- Donation Option 3 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💵 Booster</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapatkan role @Booster</li>
@@ -147,13 +147,13 @@
                                 <p class="text-xs text-gray-400">* Buka ticket untuk claim benefit</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-[#aa724d]">Boost Server</span>
+                                <span class="text-lg font-bold text-[#e7a77c]">Boost Server</span>
                             </div>
                         </div>
 
                         <!-- Donation Option 4 -->
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-80 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">💴 Benefactor</h2>
                             <ul class="text-sm text-gray-300 list-disc list-inside">
                                 <li>Mendapatkan role @Benefactor</li>
@@ -165,7 +165,7 @@
                                 <p class="text-xs text-gray-400">* Ingin berdonasi? Silahkan buka ticket</p>
                             </div>
                             <div class="text-center mt-auto">
-                                <span class="text-lg font-bold text-[#aa724d]">1.000.000 UwU</span>
+                                <span class="text-lg font-bold text-[#e7a77c]">1.000.000 UwU</span>
                             </div>
                         </div>
                     </div>
@@ -179,7 +179,7 @@
                     </div>
                     <!-- Donation Log -->
                     <div class="donationLog bg-zinc-900 rounded-lg p-5 mt-10 shadow-lg">
-                        <h2 class="text-lg sm:text-xl font-semibold text-[#aa724d] text-center mb-4">📝 Donation Log
+                        <h2 class="text-lg sm:text-xl font-semibold text-[#d49163] text-center mb-4">📝 Donation Log
                         </h2>
                         <div class="overflow-x-auto">
                             <table class="w-full text-left border-collapse">
