--- a/pages/recruitment.html
+++ b/pages/recruitment.html
@@ -23,14 +23,14 @@
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
                 <a href="../index.html#home"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Home</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Home</a>
                 <a href="../index.html#about"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">About</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">About</a>
                 <a href="leaderboard.html"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Leaderboard</a>
-                <a href="staff.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Staff</a>
-                <a href="donate.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Donate</a>
-                <a href="rules.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Leaderboard</a>
+                <a href="staff.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Staff</a>
+                <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
+                <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
                     class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
@@ -86,48 +86,48 @@
                     </div>
                     <div class="recruitmentBox-itemList flex flex-wrap gap-4 justify-center">
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🛡️ Moderator Chat</h2>
                             <p class="text-sm text-gray-300 text-center">Helps keep the chat atmosphere comfortable and
                                 conducive.</p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎤 Host Event</h2>
                             <p class="text-sm text-gray-300 text-center">Organize and lead exciting events to community.
                             </p>
                             <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🌟 Brand Ambassador</h2>
                             <p class="text-sm text-gray-300 text-center">Improve server image in the outside world.</p>
                             <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎭 Event Organizer</h2>
                             <p class="text-sm text-gray-300 text-center">Plan and run creative events for community.
                             </p>
                             <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🤝 Partner Manager</h2>
                             <p class="text-sm text-gray-300 text-center">Establish cooperation with the community or
                                 other organizations.</p>
                             <p class="text-xs text-green-400 text-center mt-auto">Status : Open</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">🎨 Designer</h2>
                             <p class="text-sm text-gray-300 text-center">Helps design interesting visual content.
                             </p>
                             <p class="text-xs text-red-500 text-center mt-auto">Status : Close</p>
                         </div>
                         <div
-                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="flex flex-col gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-96 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class="text-lg sm:text-xl font-semibold text-white text-center">📢 Human Resource</h2>
                             <p class="text-sm text-gray-300 text-center">Helps recruit and manage other staff.
                             </p>
