--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
-                <a href="#home" class="text-white hover:text-[#aa724d] transition-all duration-300">Home</a>
-                <a href="#about" class="text-white hover:text-[#aa724d] transition-all duration-300">About</a>
+                <a href="#home" class="text-white hover:text-[#e7a77c] transition-all duration-300">Home</a>
+                <a href="#about" class="text-white hover:text-[#e7a77c] transition-all duration-300">About</a>
                 <a href="pages/leaderboard.html"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Leaderboard</a>
-                <a href="pages/staff.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Staff</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Leaderboard</a>
+                <a href="pages/staff.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Staff</a>
                 <a href="pages/donate.html"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Donate</a>
-                <a href="pages/rules.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
+                <a href="pages/rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="pages/recruitment.html"
                     class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
