--- a/pages/rules.html
+++ b/pages/rules.html
@@ -23,14 +23,14 @@
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
                 <a href="../index.html#home"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Home</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Home</a>
                 <a href="../index.html#about"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">About</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">About</a>
                 <a href="leaderboard.html"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Leaderboard</a>
-                <a href="staff.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Staff</a>
-                <a href="donate.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Donate</a>
-                <a href="rules.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Leaderboard</a>
+                <a href="staff.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Staff</a>
+                <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
+                <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
                     class="bg-[#aa724d] hover:bg-[#aa724d] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
