--- a/pages/staff.html
+++ b/pages/staff.html
@@ -23,14 +23,14 @@
             <!-- Desktop Navigation -->
             <nav class="hidden md:flex items-center gap-6">
                 <a href="../index.html#home"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Home</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Home</a>
                 <a href="../index.html#about"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">About</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">About</a>
                 <a href="leaderboard.html"
-                    class="text-white hover:text-[#aa724d] transition-all duration-300">Leaderboard</a>
-                <a href="staff.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Staff</a>
-                <a href="donate.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Donate</a>
-                <a href="rules.html" class="text-white hover:text-[#aa724d] transition-all duration-300">Rules</a>
+                    class="text-white hover:text-[#e7a77c] transition-all duration-300">Leaderboard</a>
+                <a href="staff.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Staff</a>
+                <a href="donate.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Donate</a>
+                <a href="rules.html" class="text-white hover:text-[#e7a77c] transition-all duration-300">Rules</a>
                 <a href="recruitment.html"
                     class="bg-[#aa724d] hover:bg-[#6d4c35] text-white px-5 py-2 rounded-lg transition-all duration-300">Recruitment</a>
             </nav>
@@ -88,7 +88,7 @@
                     <div class="organizationBox-itemList flex flex-wrap gap-4 justify-center">
                         <!-- Community Manager -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class=" text-lg font-semibold text-white">Community Manager (Admin)</h2>
                             <p class="text-gray-400 text-sm mt-2">Leads and oversees the server, makes major decisions,
                                 and
@@ -97,7 +97,7 @@
 
                         <!-- Division Manager -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class=" text-lg font-semibold text-white">Division Manager</h2>
                             <p class="text-gray-400 text-sm mt-2">Responsible for managing and supervising each division
                                 within the community.</p>
@@ -105,7 +105,7 @@
 
                         <!-- Team Management -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class=" text-lg font-semibold text-white">Team Management (Staff)</h2>
                             <p class="text-gray-400 text-sm mt-2">Includes all the divisions below, with a Manager
                                 overseeing each division.</p>
@@ -115,7 +115,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 w-full">
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#aa724d]">Developer</h3>
+                                <h3 class="text-base font-semibold text-[]">Developer</h3>
                                 <p class="text-gray-400 text-sm">Manages the website and server bots, ensuring the
                                     system
                                     runs smoothly.</p>
@@ -123,46 +123,46 @@
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#aa724d]">Human Resource (HRD)</h3>
+                                <h3 class="text-base font-semibold text-[]">Human Resource (HRD)</h3>
                                 <p class="text-gray-400 text-sm">Recruits new staff, oversees evaluations, and resolves
                                     internal issues.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#aa724d]">Brand Ambassador</h3>
+                                <h3 class="text-base font-semibold text-[]">Brand Ambassador</h3>
                                 <p class="text-gray-400 text-sm">Promotes the community and maintains a positive server
                                     image.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#aa724d]">Event Organizer</h3>
+                                <h3 class="text-base font-semibold text-[]">Event Organizer</h3>
                                 <p class="text-gray-400 text-sm">Plans and executes engaging and beneficial events.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#aa724d]">Chat Moderator</h3>
+                                <h3 class="text-base font-semibold text-[]">Chat Moderator</h3>
                                 <p class="text-gray-400 text-sm">Monitors chats, enforces rules, and fosters positive
                                     interactions.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#aa724d]">Host Event</h3>
+                                <h3 class="text-base font-semibold text-[]">Host Event</h3>
                                 <p class="text-gray-400 text-sm">Hosts events and actively interacts with members.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#aa724d]">Designer</h3>
+                                <h3 class="text-base font-semibold text-[]">Designer</h3>
                                 <p class="text-gray-400 text-sm">Creates server designs, banners, and logos.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[#aa724d]">Partner Manager</h3>
+                                <h3 class="text-base font-semibold text-[]">Partner Manager</h3>
                                 <p class="text-gray-400 text-sm">Manages partnerships and maintains good relationships
                                     with
                                     server partners.</p>
@@ -171,7 +171,7 @@
 
                         <!-- Trainee -->
                         <div
-                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#aa724d]">
+                            class="bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-72 shadow-lg hover:shadow-xl transition-all border-2 border-[#e7a77c]">
                             <h2 class=" text-lg font-semibold text-white">Trainee</h2>
                             <p class="text-gray-400 text-sm mt-2">Learns the server work system before being placed in a
                                 suitable division.</p>
