--- a/pages/staff.html
+++ b/pages/staff.html
@@ -115,7 +115,7 @@
                         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5 w-full">
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[]">Developer</h3>
+                                <h3 class="text-base font-semibold text-[#e7a77c]">Developer</h3>
                                 <p class="text-gray-400 text-sm">Manages the website and server bots, ensuring the
                                     system
                                     runs smoothly.</p>
@@ -123,46 +123,46 @@
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[]">Human Resource (HRD)</h3>
+                                <h3 class="text-base font-semibold text-[#e7a77c]">Human Resource (HRD)</h3>
                                 <p class="text-gray-400 text-sm">Recruits new staff, oversees evaluations, and resolves
                                     internal issues.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[]">Brand Ambassador</h3>
+                                <h3 class="text-base font-semibold text-[#e7a77c]">Brand Ambassador</h3>
                                 <p class="text-gray-400 text-sm">Promotes the community and maintains a positive server
                                     image.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[]">Event Organizer</h3>
+                                <h3 class="text-base font-semibold text-[#e7a77c]">Event Organizer</h3>
                                 <p class="text-gray-400 text-sm">Plans and executes engaging and beneficial events.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[]">Chat Moderator</h3>
+                                <h3 class="text-base font-semibold text-[#e7a77c]">Chat Moderator</h3>
                                 <p class="text-gray-400 text-sm">Monitors chats, enforces rules, and fosters positive
                                     interactions.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[]">Host Event</h3>
+                                <h3 class="text-base font-semibold text-[#e7a77c]">Host Event</h3>
                                 <p class="text-gray-400 text-sm">Hosts events and actively interacts with members.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[]">Designer</h3>
+                                <h3 class="text-base font-semibold text-[#e7a77c]">Designer</h3>
                                 <p class="text-gray-400 text-sm">Creates server designs, banners, and logos.</p>
                             </div>
 
                             <div
                                 class="bg-zinc-800 bg-opacity-90 rounded-xl p-4 shadow-lg hover:shadow-xl transition-all">
-                                <h3 class="text-base font-semibold text-[]">Partner Manager</h3>
+                                <h3 class="text-base font-semibold text-[#e7a77c]">Partner Manager</h3>
                                 <p class="text-gray-400 text-sm">Manages partnerships and maintains good relationships
                                     with
                                     server partners.</p>
