--- a/pages/recruitment.html
+++ b/pages/recruitment.html
@@ -142,7 +142,7 @@
                     </div>
                     <div class="text-center mt-6">
                         <a href="https://forms.gle/o9TtYbo6Yz3RjpxVA" target="_blank"
-                            class="px-6 py-3 bg-[#aa724d] text-white font-bold rounded-lg shadow-lg hover:bg-[#6d4c35] transition-all">Join
+                            class="px-6 py-3 bg-[#aa724d] text-white font-bold rounded-lg shadow-lg hover:bg-[#6d4c35] transition-all">Apply
                             Now</a>
                     </div>
                 </div>
