--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏠
                     Home</a>
                 <a href="#about"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">ℹ️
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">📸
                     About</a>
                 <a href="pages/leaderboard.html"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏆
@@ -125,7 +125,7 @@
             <!-- Header Section -->
             <div class="text-center">
                 <h1 class="text-xl sm:text-2xl md:text-3xl  font-bold">
-                    ❓ ABOUT <span class="text-[#d49163]">SMKN 5 KIEV</span>
+                    📸 ABOUT <span class="text-[#d49163]">SMKN 5 KIEV</span>
                 </h1>
             </div>
             <!-- Content Section -->
