--- a/pages/staff.html
+++ b/pages/staff.html
@@ -51,7 +51,7 @@
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏠
                     Home</a>
                 <a href="../index.html#about"
-                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">ℹ️
+                    class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">📸
                     About</a>
                 <a href="leaderboard.html"
                     class="block text-white px-6 py-3 rounded-lg hover:bg-gray-800 hover:text-[#aa724d] transition-all duration-300">🏆
